exports[`Grid properties fit renders with value large 1`] = `
<div
  className="ax-grid ax-grid--fit--large">
  <div />
</div>
`;

exports[`Grid properties fit renders with value medium 1`] = `
<div
  className="ax-grid ax-grid--fit--medium">
  <div />
</div>
`;

exports[`Grid properties fit renders with value small 1`] = `
<div
  className="ax-grid ax-grid--fit--small">
  <div />
</div>
`;

exports[`Grid properties fit renders with value true 1`] = `
<div
  className="ax-grid ax-grid--fit">
  <div />
</div>
`;

exports[`Grid properties gutters renders with value false 1`] = `
<div
  className="ax-grid ax-grid--gutters-none">
  <div />
</div>
`;

exports[`Grid properties gutters renders with value large 1`] = `
<div
  className="ax-grid ax-grid--gutters--large">
  <div />
</div>
`;

exports[`Grid properties gutters renders with value small 1`] = `
<div
  className="ax-grid ax-grid--gutters--small">
  <div />
</div>
`;

exports[`Grid properties renders with hGutters property set to false 1`] = `
<div
  className="ax-grid ax-grid--gutters-none-h">
  <div />
</div>
`;

exports[`Grid properties renders with vGutters property set to false 1`] = `
<div
  className="ax-grid ax-grid--gutters-none-v">
  <div />
</div>
`;

exports[`Grid renders with defaultProps 1`] = `
<div
  className="ax-grid">
  <div />
</div>
`;
